# simple_dependency_example

./: README.md  cleanup.sh  readme.md  run.sh
app/: CMakeLists.txt
app/src/: main.cpp
libs/simple_library/: CMakeLists.txt
libs/simple_library/cmake/: SimpleLibraryConfig.cmake
libs/simple_library/include/: SimpleLibrary.h
libs/simple_library/src/: SimpleLibrary.cpp
libs/two_libraries/: CMakeLists.txt
libs/two_libraries/cmake/: TwoLibrariesConfig.cmake
libs/two_libraries/include/: LibraryA.h  LibraryB.h
libs/two_libraries/src/: LibraryA.cpp  LibraryB.cpp
